// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 1`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="SMS ID-undefined"
>
  <span
    className="prop"
  >
     
    SMS ID
    :
  </span>
  <span
    className="value"
  />
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 2`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Patient ID-"
>
  <span
    className="prop"
  >
     
    Patient ID
    :
  </span>
  <span
    className="value"
  />
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 3`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Age-N/A"
>
  <span
    className="prop"
  >
     
    Age
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 4`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Location-"
>
  <span
    className="prop"
  >
     
    Location
    :
  </span>
  <span
    className="value"
  />
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 5`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Weight-N/A"
>
  <span
    className="prop"
  >
     
    Current Weight
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 6`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Height-N/A"
>
  <span
    className="prop"
  >
     
    Current Height
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 7`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Health Insurance number-N/A"
>
  <span
    className="prop"
  >
     
    Health Insurance number
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 8`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Household Type-N/A"
>
  <span
    className="prop"
  >
     
    Household Type
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 9`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Ethnicity-N/A"
>
  <span
    className="prop"
  >
     
    Ethnicity
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 10`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="HandWashing-N/A"
>
  <span
    className="prop"
  >
     
    HandWashing
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 11`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Toilet-N/A"
>
  <span
    className="prop"
  >
     
    Toilet
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 12`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Parity-N/A"
>
  <span
    className="prop"
  >
     
    Current Parity
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 13`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Gravidity-N/A"
>
  <span
    className="prop"
  >
     
    Current Gravidity
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 14`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current EDD-N/A"
>
  <span
    className="prop"
  >
     
    Current EDD
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 15`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current Risk categorization-N/A"
>
  <span
    className="prop"
  >
     
    Current Risk categorization
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 16`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Delivery plan/ Location of delivery-N/A"
>
  <span
    className="prop"
  >
     
    Delivery plan/ Location of delivery
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 17`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Previous risks and Existing conditions-N/A"
>
  <span
    className="prop"
  >
     
    Previous risks and Existing conditions
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: Basic Info key value 18`] = `
<div
  className="flex-fill d-flex flex-wrap information__card_body_cell p-1"
  key="Current risks-N/A"
>
  <span
    className="prop"
  >
     
    Current risks
    :
  </span>
  <span
    className="value"
  >
    N/A
  </span>
</div>
`;

exports[`containers/PatientDetails extended renders correctly: titleDiv 1`] = `
<div
  id="titleDiv"
>
  <h2
    id="patients_title"
  >
    Patient Details
  </h2>
</div>
`;
